Done with html. Moving to css.

--- a/index.html
+++ b/index.html
@@ -61,5 +61,8 @@
             <li><a href="tel:+254708072998"><i class="fas fa-mobile-alt"></i>Call me</a></li>
         </ul>
     </section>
+    <footer>
+        &#169; Created for the HTML/CSS projects on freecodecamp.org <i class="fab fa-free-code-camp"></i>
+    </footer>
 </body>
 </html>
