--- a/index.html
+++ b/index.html
@@ -18,36 +18,50 @@
         </nav>
     </header>
     <section id="welcome-section">
-        <h1>Hey I am Mimic</h1>
+        <h1>Hey I am Wando</h1>
         <p> a web developer</p>
     </section>
     <section id="projects">
         <h1>These are some of my projects</h1>
-        <a href="" class="project-tile">
-            <img src="images/tribute_page.png" alt="Tribute Page Project">
-            <p>Tribute Page</p>
-        </a>
-        <a href="" class="project-tile">
-            <img src="images/survey_form.png" alt="Survey Form Project">
-            <p>Survey Form</p>
-        </a>
-        <a href="" class="project-tile">
-            <img src="images/product_landing_page.png" alt="Product Landing Page Project">
-            <p>Product Landing Page</p>
-        </a>
-        <a href="" class="project-tile">
-            <img src="images/technical_docs.png" alt="Technical Documentation Project">
-            <p>Technical Documentation</p>
-        </a>
-        <a href="" class="project-tile">
-            <img src="images/portfolio.png" alt="Personal Portfolio Project">
-            <p>Personal Portfolio</p>
-        </a>
-        <a href="" class="project-tile">
-            <img src="images/web_pos.png" alt="Web Point Of Sale Project">
-            <p>Web Point Of Sale (POS)</p>
-        </a>
-        <button>Show All</button>
+        <div class="tiles">
+            <div class="project-tile">
+                <a href="https://wandonium.github.io/TributePage/">
+                    <img src="images/tribute_page.png" alt="Tribute Page Project">
+                    <p><span><</span>Tribute Page<span>/></span></p>
+                </a>
+            </div>
+            <div class="project-tile">
+                <a href="https://wandonium.github.io/Survey-Form/">
+                    <img src="images/survey_form.png" alt="Survey Form Project">
+                    <p><span><</span>Survey Form<span>/></span></p>
+                </a>
+            </div>
+            <div class="project-tile">
+                <a href="https://wandonium.github.io/Product-Landing-Page/">
+                    <img src="images/product_landing_page.png" alt="Product Landing Page Project">
+                    <p><span><</span>Product Landing Page<span>/></span></p>
+                </a>
+            </div>
+            <div class="project-tile">
+                <a href="">
+                    <img src="images/technical_docs.png" alt="Technical Documentation Project">
+                    <p><span><</span>Technical Documentation<span>/></span></p>
+                </a>
+            </div>
+            <div class="project-tile">
+                <a href="https://wandonium.github.io/portfolio/index.html">
+                    <img src="images/portfolio.png" alt="Personal Portfolio Project">
+                    <p><span><</span>Personal Portfolio<span>/></span></p>
+                </a>
+            </div>
+            <div class="project-tile">
+                <a href="https://wandonium.github.io/WebPos/">
+                    <img src="images/web_pos.png" alt="Web Point Of Sale Project">
+                    <p><span><</span>Web Point Of Sale (POS)<span>/></span></p>
+                </a>
+            </div>
+        </div>
+        <a href="https://codepen.io/wandonium" class="btn">Show All</a>
     </section>
     <section id="contact">
         <div class="coffee">
